--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "dotenv": "^16.6.1",
     "embla-carousel-react": "^8.1.6",
     "firebase": "^10.14.1",
@@ -59,7 +60,7 @@
     "recharts": "^2.15.4",
     "stream-browserify": "^3.0.0",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-animate": "^1.0.0",
     "uuid": "^10.0.0",
     "zod": "^3.25.76"
   },
